--- a/views/reservation.html
+++ b/views/reservation.html
@@ -81,7 +81,7 @@
         <li class="nav-item mb-3"><a href="/dashboard" class="nav-link"><i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
         <li class="nav-item mb-3"><a href="/analytics" class="nav-link"><i class="fas fa-chart-line"></i>Analytics and Reports</a></li>
         <li class="nav-item mb-3"><a href="/tracker" class="nav-link"><i class="fas fa-map-marker-alt"></i>Bus Location Tracker</a></li>
-        <li class="nav-item mb-3"><a href="/reservation" class="nav-link"><i class="fas fa-ticket-alt"></i>Reservation Control</a></li>
+        <li class="nav-item mb-3"><a href="/reservations" class="nav-link"><i class="fas fa-ticket-alt"></i>Reservation Control</a></li>
         <li class="nav-item mb-3"><a href="/busadding" class="nav-link"><i class="fas fa-calendar-alt"></i>Bus Scheduling</a></li>
         <li class="nav-item mb-3"><a href="/notifications" class="nav-link"><i class="fas fa-bell"></i>Notifications</a></li>
         <li class="nav-item mb-3"><a href="/systemlogs" class="nav-link"><i class="fas fa-cog"></i>Settings</a></li>
@@ -120,11 +120,8 @@
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
   <script>
     $(document).ready(function() {
-      $('#busReservation').DataTable({
-        searching: true,
-        pageLength : 2,
-        // "lengthChange" : false
-      });
+      $('#busReservation').DataTable();
+
     });
   </script>
   <script type="module" src="/reservationsjs"></script>
